# technius.github.io

./: .gitignore  404.html  CNAME  Makefile  README.md  config.toml  index.html  index.xml  mkdocs.yml  pyproject.toml  shell.nix  sitemap.xml
about/: index.html
categories/: index.html  index.xml
categories/misc/: index.html  index.xml
categories/scala/: index.html  index.xml
code-samples/applicative-boilerplate/: code.scala  generic.scala
content/: _index.md  about.md  index.html  index.xml  projects.md  research.md
content/curry-howard-scala/: index.html
content/post/: akka-http-api-response-marshalling.md  applicative-boilerplate-shapeless.md  eithert-error-handling.md  rust-calculator-1.md  vocabulary-of-types.md
content/posts/: _index.md  akka-http-api-response-marshalling.md  eithert-error-handling.md  hello.md  vocabulary-of-types.md
docs/: index.md  projects.md  research.md
docs/blog/: hello.md  index.md
post/: index.html  index.xml
post/akka-http-api-response-marshalling/: index.html
post/eithert-error-handling/: index.html
post/hello/: index.html
post/rust-calculator-1/: index.html
posts/: index.html  index.xml
posts/akka-http-api-response-marshalling/: index.html
posts/eithert-error-handling/: index.html
projects/: index.html
research/: index.html
tags/: index.html  index.xml
tags/akka-http/: index.html  index.xml
tags/rest-api/: index.html  index.xml
tags/scala/: index.html  index.xml
tags/web/: index.html  index.xml
themes/plainsite/: theme.toml
themes/plainsite/layouts/_default/: baseof.html
(+4 files in other folders)
