[tool.poetry]
name = "technius.github.io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "dummy" }
]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.3"
mkdocs-macros-plugin = ">=0.6.0"
mkdocs-rss-plugin = ">=0.19.1"
mkdocs-blogging-plugin = ">=0.2.2"
pymdown-extensions = "^9.1"
mkdocs-material = "^7.3.6"
mdx_truly_sane_lists = "1.3"
poetry = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
